[!refactor] update login, authorize func
